<resources xmlns:jjkeller="http://schemas.android.com/tools">
	<string name="newline">\r\n</string>
	<string name="space">\u0020</string>
	<string name="app_name">KellerMobile</string>
	<string name="jjkeller">J. J. Keller</string>
	<string name="eld_registration_id">Pending From FMCSA</string>
	<string name="actionbar_title">KellerMobile&#8482;</string>
	<string name="actionbar_title_aobrd">AOBRD</string>
    <string name="actionbar_title_eld">ELD</string>
	<string name="actionbar_title_viewonly">KellerMobile&#8482; View-Only Mode</string>
	<string name="no_network_connection">Network connection is not available, please try again later.</string>
	<string name="invalid_activationcode">Activation code is not valid.</string>
	<string name="missing_activationcode">Activation code is required.</string>
	<string name="duplicate_login">This user is already logged in. </string>
	<string name="user_authentication_failed">User is not authenticated.  Please try again.</string>
	<string name="cantaddnewstatus">Current status is driving.  Cannot add new status when driving.</string>
	<string name="timeorstatusnotselected">Either the time, or duty status needs to be selected.</string>
	<string name="feature_not_implemented">Feature not implemented.</string>
	<string name="no_eld_available">No ELD Device is available.</string>
	<string name="required_fields_missing">Required fields are missing.</string>
	<string name="hyrail_started">Hyrail started at: <jjkeller:g date="value">$1%s</jjkeller:g></string>
	<string-array name="TimeOffsetKind_array">
		<item>Now</item>
		<item>15 Minutes</item>
		<item>30 Minutes</item>
		<item>1 Hour</item>
		<item>Exact time</item>
	</string-array>
    <string name="TimeOffsetKind_prompt">Select an Off Duty time</string>
	<string name="TimeOffsetKindMandate_prompt">Select a Duty Status Time</string>
<string name="DutyStatusonLogout_prompt">Select a Duty Status</string>
<string name="editydutystatus_prompt">Duty status time</string>
<string name="lblnewstatustitle">New Status</string>
<string name="dutystatuslist_prompt">Status</string>
<string name="maintaindrivingstatus">Maintain Driving Status</string>
<string name="authorizepersonalconveyance">Authorized personal use of CMV?</string>
<string name="utilizeNonRegDriving">Utilize Non-Regulated Driving Functionality?</string>
<string name="authorizeyardmove">Authorized Yard Move?</string>
<string name="utilizehyrailfunctionality">Utilize Hyrail Functionality?</string>
<string name="operatingunderhyrail">You are currently operating this vehicle under Hyrail functionality</string>
<string name="operatingunderyardmove">You are currently operating this vehicle under Yard Move functionality</string>
<string name="operatingundernonreg">You are currently operating this vehicle under Non-Regulated Driving functionality</string>
<string name="timelabel">Time</string>
<string name="offduty">Off Duty</string>
<string name="sleeper">Sleeper Berth</string>
<string name="driving">Driving</string>
<string name="onduty">On-Duty Not Driving</string>
<string name="oklabel">OK</string>
<string name="loginKMB">Login</string>
<string name="loginViewOnly">Check Hours</string>
<string name="cancellabel">Cancel</string>
<string name="eventvalues_logdate">LogDate</string>
<string name="eventvalues_starttime">StartTime</string>
<string name="eventvalues_dutystatus">DutyStatus</string>
<string name="eventvalues_ruleset">Ruleset</string>
<string name="lblusername">User Name:</string>
<string name="lblpassword">Password:</string>
<string name="lbltrailernumber">Trailer Number(s):</string>
<string name="lbltrailerplate">Trailer Plate:</string>
<string name="lblshipmentinfo">Shipment Info:</string>
<string name="lblvehicleplate">Vehicle Plate:</string>
<string name="lbltrailernumberview">Trailer Number(s):</string>
<string name="lbltrailerplateview">Trailer Plate:</string>
<string name="lblshipmentinfoview">Shipment Info:</string>
<string name="lblvehicleplateview">Vehicle Plate:</string>
<string name="lbltractornumberview">Unit Number:</string>
<string name="lblreturntoworklocation">Returned to Work Location</string>
<string name="lblreturntoworklocationview">Returned to Work Location:</string>
<string name="lbldeferral">Off-Duty Deferral:</string>
<string name="lbldeferralview">Off-Duty Deferral:</string>
<string name="lbltripinformationtitle">Trip Information</string>
<string name="hintTripInfoOptional">Optional</string>
<string name="button_try_again">Try Again Now Anyway</string>
<string name="btnyes">Yes</string>
<string name="btnno">No</string>
<string name="btncancel">Cancel</string>
<string name="btnok">OK</string>
<string name="button_exit">Exit</string>
<string name="lbllogdate">Log Date:  </string>
<string name="lblstatus">Status:  </string>
<string name="lblstarttime">Start Time:  </string>
<string name="lbllocation">Location:  </string>
<string name="lbleobrstatus">eobr status</string>
<string name="lblrodsentrydrivername">KellerMobile - </string>
<string name="state_promptforoffdutylogs">promptforoffdutylogs</string>
<string name="lblrodseditlocationtitle">Edit Location</string>
<string name="lblDrive">Drive:</string>
<string name="lblDuty">Duty:</string>
<string name="lblMiles">Miles:</string>
<string name="lblDaily">Total:</string>
<string name="lblRestBreak">Break:</string>
<string name="lblkm">KM:</string>
<string name="lblWeekly">Weekly:</string>
<string name="lblWeek">Week:</string>
<string name="lblTime">Time:</string>
<string name="lbllocationcode">Location Code:</string>
<string name="lblactuallocation">Actual Location:</string>
<string name="chkmaintaindrivingstatus">Maintain Driving Status</string>
<string name="lbledittimetitle">Edit Time</string>
<string name="lblactualoffdutytitle">Actual Time Off-Duty:</string>
<string name="lblLogoutDutyStatusTitle">Start time of New Duty Status:</string>
<string name="lblDutyStatusonLogout">Duty Status upon Logout:</string>
<string name="btnsubmit">Submit</string>
<string name="btnlogout">Logout</string>
<string name="lblsubmittinglogscertifesthem">Submitting logs certifies them as correct.\nOnly logs prior to today\'s log will be submitted.</string>
<string name="lblsubmittinglogscertifesthemviewonly">Submitting logs certifies them as correct.</string>
<string name="lbldailyhoursreporttitle">Daily Hours Report</string>
<string name="lbldutystatusreporttitle">Duty Status Report</string>
<string name="lblgridimageoffduty">OFF</string>
<string name="lblgridimagesleeper">SB</string>
<string name="lblgridimageonduty">ON</string>
<string name="lblgridimagedriving">D</string>
<string name="lblgridimagewellsite">WEL</string>
<string name="lblfailurereporttitle">Failure Report</string>
<string name="lbldownloadlogstitle">Download Logs</string>
<string name="lblchangepasswordtitle">Change Password</string>
<string name="lbloldpassword">Old Password:</string>
<string name="lblnewpassword">New Password:</string>
<string name="lblconfirmpassword">Confirm New Password:</string>
<string name="lblodometercalibrationtitle">Odometer Calibration</string>
<string name="lblrptavailhourstitle">Available Hours Report</string>
<string name="lblwelcometojjkellermobile">Welcome to KellerMobile&#8482;.\r\nFirst time use requires activation.</string>
<string name="lblactivationcode">Activation Code</string>
<string name="btnactivate">Activate</string>
<string name="lbldownloadlogs">Download Logs</string>
<string name="lblcreateoffdutylog">Check next to log date to create off-duty log</string>
<string name="btndownload">Download</string>
<string name="btndone">Done</string>
<string name="lblduration">Duration:</string>
<string name="lblruleset">Ruleset:</string>
<string name="lblremark">Remarks:</string>
<string name="lblapplicationsettings">Application Settings</string>
<string name="lblappversion">App Version</string>
<string name="lblusername2">User Name</string>
<string name="lblemployeename">Employee Name</string>
<string name="lblemployeeid">Employee Id</string>
<string name="lblisuserthedriver">Is User the Driver?</string>
<string name="lblcommmode">Comm Mode</string>
<string name="lbldiscoverypasskey">Discovery Passkey</string>
<string name="lbldashboardtitle">Dashboard</string>
<string name="lbleldrecordtitle">ELD Data</string>
<string name="lbltimestamp">Timestamp</string>
<string name="lbloverallstatus">Overall Status</string>
<string name="lblrecordid">Record Id</string>
<string name="lblisenginerunning">Is Engine Running?</string>
<string name="lblspeedometer">Speedometer</string>
<string name="lblodometer">Odometer</string>
<string name="lbldashboardodometer">Dashboard Odometer</string>
<string name="lbltachometer">Tachometer</string>
<string name="lblgpstimestamp">GPS Timestamp</string>
<string name="lblgpslatitude">GPS Latitude</string>
<string name="lblgpslongitude">GPS Longitude</string>
<string name="lblgpsfixindicator">GPS Fix Indicator</string>
<string name="lbladmintitle">Admin Functions</string>
<string name="btn_resetHistoryEld">Reset ELD Historical Data</string>
<string name="btn_resetdatausage">Reset Data Usage</string>
<string name="btn_deletedb">Delete Database</string>
<string name="mnu_sysmenu_reports">Reports</string>
<string name="mnu_sysmenu_vehicleinspection">Vehicle Inspection</string>
<string name="footershortcut_main">Main</string>
<string name="footershortcut_inspectormode">Inspector Mode</string>
<string name="footershortcut_help">Help</string>
<string name="btn_clearhomesetting">Clear Home Setting</string>
<string name="clearentireeldlabel">Clear ELD</string>
<string name="btn_powercyclereseteld">ELD Power-cycle Reset </string>
<string name="featuretoggle">Feature Toggles</string>
<string name="lbleldmandate">ELD Mandate</string>
<string name="lblignoreservertime">Ignore Server Time</string>
<string name="lblshowdebugfunctions">Show Debug Functions</string>
<string name="lblusecloudservices">Use Cloud Services</string>
<string name="lbldefaulttripinformation">Default Trip Information</string>
<string name="lblalkcopilotenabled">ALK CoPilot Enabled</string>
<string name="lblpersonalconveyanceenabled">Personal Conveyance Enabled</string>
<string name="lblhyrailenabled">Hyrail Enabled</string>
<string name="lblnonregdrivingenabled">Non-Regulated Driving Enabled</string>
<string name="lblgeotabinjectdatastallsenabled">Geotab Inject Data Stalls Enabled</string>
<string name="lblforcecrashesenabled">Force Crashes Enabled</string>
<string name="lbl_EldReadVin">Disable Reading ELD VIN</string>
<string name="lblDisableReadEldVin">Is Reading ELD VIN Disabled</string>
<string name="lblignorefirmwareupdate">Ignore Firmware Update</string>
<string name="lblForceComplianceTabletMode">Force Compliance Tablet Mode</string>
<string name="lblsetmobiletimestamptonull">Set Start Mobile Timestamp To Null</string>
	<string name="btn_adminmalfunctionanddatadiagnostic">Malfunctions and Data Diagnostics</string>
	<string name="btn_adminDataTransferStatus">Data Transfer Status</string>
	<string name="btn_adminStorageFiller">Debug Storage Filler</string>
	<string name="btn_adminClearActiveDeviceCrc">Debug Clear Active Device Crc</string>
	<string name="btn_adminSaveDuplicateDutyStatus">Debug Save Dup. Duty Status</string>
	<string name="chk_ForceGeotabInvalidGpsLatch">Force Invalid GPS for Geotab</string>
	<string name="rsiheader_comment">Comment</string>
	<string name="rsiheader_enginehours">Engine Hours</string>
	<string name="rsiheader_odometer">Odometer</string>
	<string name="rsiheader_location">Location</string>
	<string name="rsiheader_origin">Origin</string>
	<string name="rsiheader_recordstatus">Record Status</string>
	<string name="rsiheader_sequenceid">Sequence ID</string>
	<string name="rsiheader_eventcode">Code</string>
	<string name="rsiheader_eventtype">Event Type</string>
    <string name="lblselectivefeaturetoggles">Selective Feature Toggles\n(If this feature is Enabled, rest of the Feature Toggles are downloaded from Encompass and applied)</string>
</resources>