<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@android:color/white">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableLayout
            android:id="@+id/table_rsiLogDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/headerblue14789">

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/timelabel"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_eventtype"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_eventcode"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_sequenceid"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_recordstatus"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_origin"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_location"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_odometer"/>

                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_enginehours"/>


                <TextView
                    style="@style/TableRow_LogDetail_Header"
                    android:text="@string/rsiheader_comment"/>
            </TableRow>

        </TableLayout>

    </HorizontalScrollView>
</ScrollView>