<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Theme.TextViewBlack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/featuretoggle"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

			<CheckBox
				android:id="@+id/chkSelectiveFeatureToggles"
				style="@style/Theme.CheckBoxBlack"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblselectivefeaturetoggles" >
			</CheckBox>

		    <CheckBox
		        android:id="@+id/chkEldMandate"
		        style="@style/Theme.CheckBoxBlack"
                android:layout_below="@+id/chkSelectiveFeatureToggles"
                android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lbleldmandate" >
		    </CheckBox>
		
		    <CheckBox
		        android:id="@+id/chkIgnoreServerTime"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkEldMandate"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblignoreservertime" >
		    </CheckBox>
		
		    <CheckBox
		        android:id="@+id/chkShowDebugFunctions"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkIgnoreServerTime"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblshowdebugfunctions" >
		    </CheckBox>
		    
		    <CheckBox
		        android:id="@+id/chkUseCloudServices"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkShowDebugFunctions"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblusecloudservices" >
		    </CheckBox>
		    
		    <CheckBox
		        android:id="@+id/chkDefaultTripInformation"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkUseCloudServices"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lbldefaulttripinformation" >
		    </CheckBox>
		    
		    <CheckBox
		        android:id="@+id/chkAlkCopilotEnabled"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkDefaultTripInformation"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblalkcopilotenabled" >
		    </CheckBox>
		    
		    <CheckBox
		        android:id="@+id/chkPersonalConveyanceEnabled"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkAlkCopilotEnabled"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblpersonalconveyanceenabled" >
		    </CheckBox>

		    <CheckBox
		        android:id="@+id/chkIgnoreFirmwareUpdate"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkPersonalConveyanceEnabled"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblignorefirmwareupdate" >
		    </CheckBox>
		    
		    <CheckBox
		        android:id="@+id/chkForceComplianceTabletMode"
		        style="@style/Theme.CheckBoxBlack"
		        android:layout_below="@+id/chkIgnoreFirmwareUpdate"
		        android:layout_marginTop="10dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblForceComplianceTabletMode" >
		    </CheckBox>

			<CheckBox
				android:id="@+id/chkSetMobileTimestampToNull"
				style="@style/Theme.CheckBoxBlack"
				android:layout_below="@+id/chkForceComplianceTabletMode"
				android:layout_marginTop="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblsetmobiletimestamptonull" >
			</CheckBox>

			<CheckBox
				android:id="@+id/chkHyrailEnabled"
				style="@style/Theme.CheckBoxBlack"
				android:layout_below="@+id/chkSetMobileTimestampToNull"
				android:layout_marginTop="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblhyrailenabled" >
			</CheckBox>

			<CheckBox
				android:id="@+id/chkNonRegDrivingEnabled"
				style="@style/Theme.CheckBoxBlack"
				android:layout_below="@+id/chkHyrailEnabled"
				android:layout_marginTop="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblnonregdrivingenabled" >
			</CheckBox>

			<CheckBox
				android:id="@+id/chkGeotabInjectDataStallsEnabled"
				style="@style/Theme.CheckBoxBlack"
				android:layout_below="@+id/chkNonRegDrivingEnabled"
				android:layout_marginTop="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblgeotabinjectdatastallsenabled"
>			</CheckBox>

			<CheckBox
				android:id="@+id/chkForceCrashes"
				style="@style/Theme.CheckBoxBlack"
				android:layout_below="@+id/chkGeotabInjectDataStallsEnabled"
				android:layout_marginTop="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblforcecrashesenabled">
			</CheckBox>

		    <Button
		        android:id="@+id/ft_btnOk"
		        style="@style/KMBButton"
		        android:layout_alignLeft="@+id/chkForceComplianceTabletMode"
		        android:layout_below="@+id/chkForceCrashes"
		        android:layout_marginTop="30dp"
		        android:width="75dp" android:height="55dp"
		        android:text="@string/oklabel" >
		    </Button>
		
		    <Button
		        android:id="@+id/ft_btnCancel"
		        style="@style/KMBButton"
		        android:layout_alignTop="@+id/ft_btnOk"
		        android:layout_toRightOf="@+id/ft_btnOk"
		        android:layout_marginLeft="30dp" android:width="75dp" android:height="55dp"
		        android:text="@string/cancellabel" >
		    </Button>
        </RelativeLayout>
    </ScrollView>
    
</TableLayout>