<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lbladmintitle"
        android:textStyle="bold" 
        style="@style/Theme.TextViewBlack" >
    </TextView>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle" >
    
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        
		    <Button
		        android:id="@+id/btnResetHistory"
		        style="@style/KMBLargeButton"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:text="@string/btn_resetHistoryEld" >
		    </Button>
		    
			<Button
				android:id="@+id/btnResetEobr"
				style="@style/KMBLargeButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:text="@string/clearentireeldlabel" />
		
		    <Button
		        android:id="@+id/btnDashboard"
		        style="@style/KMBLargeButton"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:text="@string/lbldashboardtitle" >
		    </Button>
		
		    <Button
		        android:id="@+id/btnResetDataUsage"
		        style="@style/KMBLargeButton"
		        android:layout_height="wrap_content"
				android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:text="@string/btn_resetdatausage" >
		    </Button>
		
		    <Button
		        android:id="@+id/btnDeletDB"
		        style="@style/KMBLargeButton"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:text="@string/btn_deletedb" >
		    </Button>
		
		    <Button
		        android:id="@+id/btnClearHomeSetting"
		        style="@style/KMBLargeButton"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:text="@string/btn_clearhomesetting" >
		    </Button>    
		    
		    <Button
		        android:id="@+id/btnPowerCycleReset"
		        style="@style/KMBLargeButton"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:text="@string/btn_powercyclereseteld" >
		    </Button>

			<Button
				android:id="@+id/btnAdminMalfAndDataDiag"
				style="@style/KMBLargeButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dip"
				android:text="@string/btn_adminmalfunctionanddatadiagnostic" >
			</Button>

			<Button
				android:id="@+id/btnAdminDataTransferStatus"
				style="@style/KMBLargeButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dip"
				android:text="@string/btn_adminDataTransferStatus" >
			</Button>

			<Button
				android:id="@+id/btnAdminStorageFiller"
				style="@style/KMBLargeButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dip"
				android:text="@string/btn_adminStorageFiller"
				android:visibility="gone">
			</Button>

			<Button
				android:id="@+id/btnAdminClearActiveDeviceCrc"
				style="@style/KMBLargeButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dip"
				android:text="@string/btn_adminClearActiveDeviceCrc"
				android:visibility="gone">
			</Button>

			<Button
				android:id="@+id/btnAdminSaveDuplicateDutyStatus"
				style="@style/KMBLargeButton"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="10dip"
				android:text="@string/btn_adminSaveDuplicateDutyStatus"
				android:visibility="gone">
			</Button>

		    <CheckBox
		        android:id="@+id/chkEldReadVin"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
			    android:textColor="#000000"
		        android:text="@string/lbl_EldReadVin" />

			<CheckBox
				android:id="@+id/chkForceGeotabInvalidGpsLatch"
				style="@style/Theme.CheckBoxBlack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:textColor="#000000"
				android:text="@string/chk_ForceGeotabInvalidGpsLatch" />

			<CheckBox
				android:id="@+id/chkForceGeotabOdoError"
				style="@style/Theme.CheckBoxBlack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:textColor="#000000"
				android:text="Enable Geotab Odometer Error" />

			<CheckBox
				android:id="@+id/chkForceGeotabVssError"
				style="@style/Theme.CheckBoxBlack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:textColor="#000000"
				android:text="Enable Geotab VSS Error" />
			<CheckBox
				android:id="@+id/chkForceInvalidGPSDate"
				style="@style/Theme.CheckBoxBlack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:textColor="#000000"
				android:text="Enable invalid GPS date: Set to 12/30/15" />

		</LinearLayout>
    </ScrollView>
</RelativeLayout>