<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dip"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btnMain"
        style="@style/KMBShortcutFooterButton"
        android:layout_height="fill_parent"
        android:drawableTop="@drawable/ic_menu_home"
        android:text="@string/footershortcut_main" />

    <Button
        android:id="@+id/btnReports"
        style="@style/KMBShortcutFooterButton"
        android:layout_height="fill_parent"
        android:drawableTop="@drawable/ic_menu_copy_holo_dark"
        android:text="@string/mnu_sysmenu_reports" />

    <Button
        android:id="@+id/btnHelp"
        style="@style/KMBShortcutFooterButton"
        android:layout_height="fill_parent"
        android:drawableTop="@drawable/ic_menu_help"
        android:text="@string/footershortcut_help" />

    <Button
        android:id="@+id/btnInspectorMode"
        style="@style/KMBShortcutFooterButton"
        android:layout_height="fill_parent"
        android:drawableTop="@drawable/ic_menu_cc"
        android:text="@string/footershortcut_inspectormode" />

    <Button
        android:id="@+id/btnVehicleInspection"
        style="@style/KMBShortcutFooterButton"
        android:layout_height="fill_parent"
        android:drawableTop="@drawable/ic_menu_edit"
        android:text="@string/mnu_sysmenu_vehicleinspection" />

</LinearLayout>